MemoryEvent as interface (#455)
* Replaced MemEvent by an interface MemoryEvent.
The old MemEvent class is now AbstractMemoryEvent.

* Removed MemoryEvent.canRace()