@@ -5,7 +5,7 @@ import com.dat3m.dartagnan.program.Program;
 import com.dat3m.dartagnan.program.analysis.Dependency;
 import com.dat3m.dartagnan.program.event.Tag;
 import com.dat3m.dartagnan.program.event.core.Event;
-import com.dat3m.dartagnan.program.event.core.MemEvent;
+import com.dat3m.dartagnan.program.event.core.MemoryEvent;
 import com.dat3m.dartagnan.program.event.core.rmw.RMWStoreExclusive;
 import com.dat3m.dartagnan.program.event.core.utils.RegWriter;
 import com.dat3m.dartagnan.program.filter.Filter;
@@ -431,7 +431,7 @@ public class WmmEncoder implements Encoder {
             for (RMWStoreExclusive store : program.getEvents(RMWStoreExclusive.class)) {
                 BooleanFormula storeExec = bmgr.makeFalse();
                 for (Tuple t : mayIn.apply(store)) {
-                    MemEvent load = (MemEvent) t.getFirst();
+                    MemoryEvent load = (MemoryEvent) t.getFirst();
                     BooleanFormula sameAddress = context.sameAddress(load, store);
                     // Encode if load and store form an exclusive pair
                     BooleanFormula isPair = exclPair(load, store);
@@ -468,8 +468,8 @@ public class WmmEncoder implements Encoder {
             // ---------- Encode actual RMW relation ----------
             EncodingContext.EdgeEncoder edge = context.edge(rmw);
             for (Tuple tuple : encodeSets.get(rmw)) {
-                MemEvent load = (MemEvent) tuple.getFirst();
-                MemEvent store = (MemEvent) tuple.getSecond();
+                MemoryEvent load = (MemoryEvent) tuple.getFirst();
+                MemoryEvent store = (MemoryEvent) tuple.getSecond();
                 if (!load.hasTag(Tag.EXCL) || !(store instanceof RMWStoreExclusive)) {
                     // Non-LL/SC type RMWs always hold
                     enc.add(bmgr.equivalence(edge.encode(tuple), context.execution(load, store)));
@@ -500,7 +500,7 @@ public class WmmEncoder implements Encoder {
             for (Tuple tuple : encodeSets.get(loc)) {
                 enc.add(bmgr.equivalence(edge.encode(tuple), bmgr.and(
                         execution(tuple),
-                        context.sameAddress((MemEvent) tuple.getFirst(), (MemEvent) tuple.getSecond())
+                        context.sameAddress((MemoryEvent) tuple.getFirst(), (MemoryEvent) tuple.getSecond())
                 )));
             }
             return null;
@@ -508,18 +508,18 @@ public class WmmEncoder implements Encoder {
 
         @Override
         public Void visitReadFrom(Relation rf) {
-            Map<MemEvent, List<BooleanFormula>> edgeMap = new HashMap<>();
+            Map<MemoryEvent, List<BooleanFormula>> edgeMap = new HashMap<>();
             EncodingContext.EdgeEncoder edge = context.edge(rf);
             for (Tuple tuple : ra.getKnowledge(rf).getMaySet()) {
-                MemEvent w = (MemEvent) tuple.getFirst();
-                MemEvent r = (MemEvent) tuple.getSecond();
+                MemoryEvent w = (MemoryEvent) tuple.getFirst();
+                MemoryEvent r = (MemoryEvent) tuple.getSecond();
                 BooleanFormula e = edge.encode(tuple);
                 BooleanFormula sameAddress = context.sameAddress(w, r);
                 BooleanFormula sameValue = context.equal(context.value(w), context.value(r));
                 edgeMap.computeIfAbsent(r, key -> new ArrayList<>()).add(e);
                 enc.add(bmgr.implication(e, bmgr.and(execution(tuple), sameAddress, sameValue)));
             }
-            for (MemEvent r : edgeMap.keySet()) {
+            for (MemoryEvent r : edgeMap.keySet()) {
                 List<BooleanFormula> edges = edgeMap.get(r);
                 if (GlobalSettings.ALLOW_MULTIREADS) {
                     enc.add(bmgr.implication(context.execution(r), bmgr.or(edges)));
@@ -542,10 +542,10 @@ public class WmmEncoder implements Encoder {
         @Override
         public Void visitCoherence(Relation co) {
             boolean idl = !context.useSATEncoding;
-            List<MemEvent> allWrites = program.getEvents(MemEvent.class).stream()
+            List<MemoryEvent> allWrites = program.getEvents(MemoryEvent.class).stream()
                     .filter(e -> e.hasTag(WRITE))
                     .sorted(Comparator.comparingInt(Event::getGlobalId))
-                    .collect(toList());
+                    .toList();
             EncodingContext.EdgeEncoder edge = context.edge(co);
             RelationAnalysis.Knowledge k = ra.getKnowledge(co);
             Set<Tuple> transCo = idl ? ra.findTransitivelyImpliedCo(co) : null;
@@ -553,15 +553,15 @@ public class WmmEncoder implements Encoder {
             if (idl) {
                 // ---- Encode clock conditions (init = 0, non-init > 0) ----
                 NumeralFormula.IntegerFormula zero = imgr.makeNumber(0);
-                for (MemEvent w : allWrites) {
+                for (MemoryEvent w : allWrites) {
                     NumeralFormula.IntegerFormula clock = context.memoryOrderClock(w);
                     enc.add(w.hasTag(INIT) ? imgr.equal(clock, zero) : imgr.greaterThan(clock, zero));
                 }
             }
             // ---- Encode coherences ----
             for (int i = 0; i < allWrites.size() - 1; i++) {
-                MemEvent x = allWrites.get(i);
-                for (MemEvent z : allWrites.subList(i + 1, allWrites.size())) {
+                MemoryEvent x = allWrites.get(i);
+                for (MemoryEvent z : allWrites.subList(i + 1, allWrites.size())) {
                     Tuple xz = new Tuple(x, z);
                     Tuple zx = xz.getInverse();
                     boolean forwardPossible = k.containsMay(xz);
@@ -583,7 +583,7 @@ public class WmmEncoder implements Encoder {
                     } else {
                         enc.add(bmgr.or(bmgr.not(coF), bmgr.not(coB)));
                         if (!k.containsMust(xz) && !k.containsMust(zx)) {
-                            for (MemEvent y : allWrites) {
+                            for (MemoryEvent y : allWrites) {
                                 Tuple xy = new Tuple(x, y);
                                 Tuple yz = new Tuple(y, z);
                                 if (forwardPossible && k.containsMay(xy) && k.containsMay(yz)) {
